add get invoice with swagger documentation
